--- a/notebooks/airbnb.ipynb
+++ b/notebooks/airbnb.ipynb
@@ -49,6 +49,7 @@
     "\n",
     "from lmmnn.layers import NLL\n",
     "from lmmnn.callbacks import EarlyStoppingWithSigmasConvergence\n",
+    "from lmmnn.menet import menet_fit, menet_predict\n",
     "\n",
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -68,7 +69,7 @@
    "source": [
     "# Note: data_cleaned_train_comments_X.csv is the result of an ETL process described in Kalehbasti et. al. (2019), see our paper.\n",
     "# We followed the script in their Github repo exactly.\n",
-    "path = 'C:/Users/gsimchoni/AirBnbPricePrediction/Data/'\n",
+    "path = 'AirBnbPricePrediction/Data/'\n",
     "X_train = pd.read_csv(path + 'data_cleaned_train_comments_X.csv')\n",
     "y_train = pd.read_csv(path + 'data_cleaned_train_y.csv').values\n",
     "y_train = y_train.reshape(len(y_train), )\n",
@@ -416,8 +417,12 @@
     "        y_pred, sigmas = reg_nn_lmm(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
     "    elif reg_type == 'ignore':\n",
     "        y_pred, sigmas = reg_nn_ignore(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
-    "    else:\n",
+    "    elif reg_type == 'embed':\n",
     "        y_pred, sigmas = reg_nn_embed(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
+    "    elif reg_type == 'menet':\n",
+    "        y_pred, sigmas, _ = reg_nn_menet(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
+    "    else:\n",
+    "      raise ValueError(reg_type + 'is an unknown reg_type')\n",
     "    mse = np.mean((y_pred - y_test)**2)\n",
     "    return mse, sigmas\n",
     "\n",
@@ -479,7 +484,25 @@
     "    y_pred_tr = model.predict([X_train[col_set], y_train, X_train['host_id']]).reshape(X_train.shape[0])\n",
     "    b_hat = calc_b_hat(X_train, y_train, y_pred_tr, n_cats, sig2e_est, sig2b_est, 'host_id')\n",
     "    y_pred = model.predict([X_test[col_set], np.random.normal(size=y_test.shape), X_test['host_id']]).reshape(X_test.shape[0]) + b_hat[X_test['host_id']]\n",
-    "    return y_pred, (sig2e_est, sig2b_est)"
+    "    return y_pred, (sig2e_est, sig2b_est)\n",
+    "\n",
+    "def reg_nn_menet(X_train, X_test, y_train, y_test, batch_size, epochs, patience):\n",
+    "    q = n_cats\n",
+    "    clusters_train, clusters_test = X_train['host_id'].values, X_test['host_id'].values\n",
+    "    X_train, X_test = X_train[col_set].values, X_test[col_set].values\n",
+    "    # y_train, y_test = y_train.values, y_test.values\n",
+    "\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(units=20, activation='relu', input_dim=X_train.shape[1]))\n",
+    "    model.add(Dense(units=5, activation='relu'))\n",
+    "    model.add(Dense(units=1, activation='linear'))\n",
+    "    adam = Adam(lr=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\n",
+    "    model.compile(loss='mse', optimizer=adam)\n",
+    "\n",
+    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q,\n",
+    "        batch_size, epochs, patience, verbose=True)\n",
+    "    y_pred = menet_predict(model, X_test, clusters_test, q, b_hat)\n",
+    "    return y_pred, (sig2e_est, None), n_epochs"
    ]
   },
   {
@@ -526,10 +549,13 @@
     "    print(' finished ignore deep=%s, mse: %.2f' % (deep, mse_ig))\n",
     "    mse_em, _ = reg_nn(X_train, X_test, y_train, y_test, reg_type='embed')\n",
     "    print(' finished embed deep=%s, mse: %.2f' % (deep, mse_em))\n",
+    "    mse_me, sigmas_me = reg_nn(X_train, X_test, y_train, y_test, reg_type='menet')\n",
+    "    print(' finished menet deep=%s, mse: %.2f' % (deep, mse_me))\n",
     "    res.loc[counter + 0] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1]]\n",
     "    res.loc[counter + 1] = [i, 'ignore', deep, mse_ig, np.nan, np.nan]\n",
     "    res.loc[counter + 2] = [i, 'embed', deep, mse_em, np.nan, np.nan]\n",
-    "    counter += 3\n",
+    "    res.loc[counter + 3] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan]\n",
+    "    counter += 4 \n",
     "\n",
     "kf = KFold(n_splits=5)\n",
     "\n",
@@ -581,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/res_airbnb.csv')"
+    "res.to_csv('../results/airbnb.csv')"
    ]
   }
  ]
