--- a/notebooks/ukb_pa.ipynb
+++ b/notebooks/ukb_pa.ipynb
@@ -49,6 +49,7 @@
     "\n",
     "from lmmnn.layers import NLL\n",
     "from lmmnn.callbacks import EarlyStoppingWithSigmasConvergence\n",
+    "from lmmnn.menet import menet_fit, menet_predict\n",
     "\n",
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -67,7 +68,7 @@
    "source": [
     "# Note: pa_final.csv is the result of an ETL process described in Pierce et. al. (2020), see our paper\n",
     "# after downloading the UKB relevant data.\n",
-    "ukb = pd.read_csv('C:/Users/gsimchoni/ukb/pa_final.csv')\n",
+    "ukb = pd.read_csv('pa_final.csv')\n",
     "ukb.drop(['center', 'job_orig', 'center_orig'], axis=1, inplace=True)"
    ]
   },
@@ -300,6 +301,25 @@
     "    y_pred = model.predict([X_test[x_cols], X_test['job']]).reshape(X_test.shape[0])\n",
     "    return y_pred, (None, None)\n",
     "\n",
+    "def reg_nn_menet(X_train, X_test, y_train, y_test, q, batch_size, epochs, patience, deep=False):\n",
+    "    clusters_train, clusters_test = X_train['job'].values, X_test['job'].values\n",
+    "    X_train, X_test = X_train[x_cols].values, X_test[x_cols].values\n",
+    "    # y_train, y_test = y_train.values, y_test.values\n",
+    "\n",
+    "    model = Sequential()\n",
+    "    if deep:\n",
+    "        add_deep_layers_sequential(model, X_train.shape[1])\n",
+    "    else:\n",
+    "        add_shallow_layers_sequential(model, X_train.shape[1])\n",
+    "    model.add(Dense(1))\n",
+    "\n",
+    "    model.compile(loss='mse', optimizer='adam')\n",
+    "\n",
+    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q,\n",
+    "        batch_size, epochs, patience, verbose=True)\n",
+    "    y_pred = menet_predict(model, X_test, clusters_test, q, b_hat)\n",
+    "    return y_pred, (sig2e_est, None), n_epochs\n",
+    "\n",
     "def reg_nn(X_train, X_test, y_train, y_test, n_cats, batch=30, epochs=2000, patience=10, reg_type='ohe', deep=False):    \n",
     "    if reg_type == 'ohe':\n",
     "        y_pred, sigmas = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
@@ -307,8 +327,12 @@
     "        y_pred, sigmas = reg_nn_lmm(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
     "    elif reg_type == 'ignore':\n",
     "        y_pred, sigmas = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep, ignore_RE=True)\n",
-    "    else:\n",
+    "    elif reg_type == 'embed':\n",
     "        y_pred, sigmas = reg_nn_embed(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+    "    elif reg_type == 'menet':\n",
+    "        y_pred, sigmas, _ = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+    "    else:\n",
+    "        raise ValueError(reg_type + 'is an unknown reg_type')\n",
     "    mse = np.mean((y_pred - y_test)**2)\n",
     "    return mse, sigmas"
    ]
@@ -369,12 +393,15 @@
     "    print(' finished ignore deep=%s, mse: %.2f' % (deep, mse_ig))\n",
     "    mse_em, _ = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='embed', deep=deep)\n",
     "    print(' finished embed deep=%s, mse: %.2f' % (deep, mse_em))\n",
+    "    mse_me, sigmas_me = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='menet', deep=deep)\n",
+    "    print(' finished menet deep=%s, mse: %.2f' % (deep, mse_me))\n",
     "    mse_dec = 100 * (mse_lmm - mse_lm) / mse_lm\n",
     "    res.loc[counter + 0] = [i, 'lm', deep, mse_lm, np.nan, np.nan]\n",
     "    res.loc[counter + 1] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1]]\n",
     "    res.loc[counter + 2] = [i, 'ignore', deep, mse_ig, np.nan, np.nan]\n",
     "    res.loc[counter + 3] = [i, 'embed', deep, mse_em, np.nan, np.nan]\n",
-    "    counter += 4\n",
+    "    res.loc[counter + 4] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan]\n",
+    "    counter += 5\n",
     "    print('iteration %d, deep=%s, mse change from mse_lm: %.2f%%' % (i, deep, mse_dec))   \n",
     "\n",
     "kf = KFold(n_splits=5)\n",
@@ -437,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/res_ukb_pa.csv')"
+    "res.to_csv('../results/ukb_pa.csv')"
    ]
   }
  ]
