Updates ukb_pa notebook to include runtime

--- a/notebooks/ukb_pa.ipynb
+++ b/notebooks/ukb_pa.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -248,7 +249,7 @@
     "    history = model.fit(X_train, y_train, batch_size=batch_size, epochs=epochs,\n",
     "                        validation_split=0.1, callbacks=callbacks, verbose=0)\n",
     "    y_pred = model.predict(X_test).reshape(X_test.shape[0])\n",
-    "    return y_pred, (None, None)\n",
+    "    return y_pred, (None, None), len(history.history['loss'])\n",
     "\n",
     "def reg_nn_lmm(X_train, X_test, y_train, y_test, n_cats, batch_size, epochs, patience, deep=False):\n",
     "    X_input = Input(shape=(X_train[x_cols].shape[1],))\n",
@@ -265,17 +266,23 @@
     "    model.compile(optimizer= 'adam')\n",
     "    \n",
     "    patience = epochs if patience is None else patience\n",
-    "    callbacks = [EarlyStoppingWithSigmasConvergence(patience=patience)]\n",
+    "    # callbacks = [EarlyStoppingWithSigmasConvergence(patience=patience)]\n",
+    "    callbacks = [EarlyStopping(monitor='val_loss', patience=patience)]\n",
+    "    \n",
+    "    X_train.reset_index(inplace=True)\n",
+    "    X_train.sort_values(by=['job'], inplace=True)\n",
+    "    y_train = y_train[X_train.index]\n",
+    "    \n",
     "    history = model.fit([X_train[x_cols], y_train, X_train['job']], None,\n",
     "                        batch_size=batch_size, epochs=epochs, validation_split=0.1,\n",
-    "                        callbacks=callbacks, verbose=0)\n",
+    "                        callbacks=callbacks, verbose=1)\n",
     "    \n",
     "    sig2e_est, sig2b_est = model.layers[-1].get_vars()\n",
     "    y_pred_tr = model.predict([X_train[x_cols], y_train, X_train['job']]).reshape(X_train.shape[0])\n",
     "    b_hat = calc_b_hat(X_train, y_train, y_pred_tr, n_cats, sig2e_est, sig2b_est, 'job')\n",
     "    dummy_y_test = np.random.normal(size=y_test.shape)\n",
     "    y_pred = model.predict([X_test[x_cols], dummy_y_test, X_test['job']]).reshape(X_test.shape[0]) + b_hat[X_test['job']]\n",
-    "    return y_pred, (sig2e_est, sig2b_est)\n",
+    "    return y_pred, (sig2e_est, sig2b_est), len(history.history['loss'])\n",
     "\n",
     "def reg_nn_embed(X_train, X_test, y_train, y_test, n_cats, batch_size, epochs, patience, deep=False):\n",
     "    embed_dim = 10\n",
@@ -299,7 +306,7 @@
     "                        batch_size=batch_size, epochs=epochs, validation_split=0.1,\n",
     "                        callbacks=callbacks, verbose=0)\n",
     "    y_pred = model.predict([X_test[x_cols], X_test['job']]).reshape(X_test.shape[0])\n",
-    "    return y_pred, (None, None)\n",
+    "    return y_pred, (None, None), len(history.history['loss'])\n",
     "\n",
     "def reg_nn_menet(X_train, X_test, y_train, y_test, q, batch_size, epochs, patience, deep=False):\n",
     "    clusters_train, clusters_test = X_train['job'].values, X_test['job'].values\n",
@@ -315,94 +322,56 @@
     "\n",
     "    model.compile(loss='mse', optimizer='adam')\n",
     "\n",
-    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q,\n",
-    "        batch_size, epochs, patience, verbose=True)\n",
+    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q, batch_size, epochs, patience, verbose=True)\n",
     "    y_pred = menet_predict(model, X_test, clusters_test, q, b_hat)\n",
     "    return y_pred, (sig2e_est, None), n_epochs\n",
     "\n",
-    "def reg_nn(X_train, X_test, y_train, y_test, n_cats, batch=30, epochs=2000, patience=10, reg_type='ohe', deep=False):    \n",
+    "def reg_nn(X_train, X_test, y_train, y_test, n_cats, batch=30, epochs=50, patience=10, reg_type='ohe', deep=False):\n",
+    "    start = time.time()\n",
     "    if reg_type == 'ohe':\n",
-    "        y_pred, sigmas = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
     "    elif reg_type == 'lmm':\n",
-    "        y_pred, sigmas = reg_nn_lmm(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_lmm(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
     "    elif reg_type == 'ignore':\n",
-    "        y_pred, sigmas = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep, ignore_RE=True)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep, ignore_RE=True)\n",
     "    elif reg_type == 'embed':\n",
-    "        y_pred, sigmas = reg_nn_embed(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_embed(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
     "    elif reg_type == 'menet':\n",
-    "        y_pred, sigmas, _ = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
     "    else:\n",
-    "        raise ValueError(reg_type + 'is an unknown reg_type')\n",
+    "      raise ValueError(reg_type + 'is an unknown reg_type')\n",
+    "    end = time.time()\n",
     "    mse = np.mean((y_pred - y_test)**2)\n",
-    "    return mse, sigmas"
+    "    return mse, sigmas, n_epochs, end - start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "iteration 0\n",
-      " finished lm deep=True, mse: 0.80\n",
-      " finished lmm deep=True, mse: 0.79\n",
-      " finished ignore deep=True, mse: 0.80\n",
-      " finished embed deep=True, mse: 0.80\n",
-      "iteration 0, deep=True, mse change from mse_lm: -0.45%\n",
-      "iteration 1\n",
-      " finished lm deep=True, mse: 0.85\n",
-      " finished lmm deep=True, mse: 0.84\n",
-      " finished ignore deep=True, mse: 0.84\n",
-      " finished embed deep=True, mse: 0.86\n",
-      "iteration 1, deep=True, mse change from mse_lm: -1.34%\n",
-      "iteration 2\n",
-      " finished lm deep=True, mse: 0.80\n",
-      " finished lmm deep=True, mse: 0.80\n",
-      " finished ignore deep=True, mse: 0.80\n",
-      " finished embed deep=True, mse: 0.80\n",
-      "iteration 2, deep=True, mse change from mse_lm: -0.94%\n",
-      "iteration 3\n",
-      " finished lm deep=True, mse: 0.81\n",
-      " finished lmm deep=True, mse: 0.81\n",
-      " finished ignore deep=True, mse: 0.81\n",
-      " finished embed deep=True, mse: 0.81\n",
-      "iteration 3, deep=True, mse change from mse_lm: -0.35%\n",
-      "iteration 4\n",
-      " finished lm deep=True, mse: 0.82\n",
-      " finished lmm deep=True, mse: 0.80\n",
-      " finished ignore deep=True, mse: 0.81\n",
-      " finished embed deep=True, mse: 0.82\n",
-      "iteration 4, deep=True, mse change from mse_lm: -1.42%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res = pd.DataFrame(columns=['experiment', 'exp_type', 'deep', 'mse', 'sigma_e_est', 'sigma_b_est'])\n",
+    "res = pd.DataFrame(columns=['experiment', 'exp_type', 'deep', 'mse', 'sigma_e_est', 'sigma_b_est', 'n_epoch', 'time'])\n",
     "counter = 0\n",
     "\n",
     "def iterate_reg_types(X_train, X_test, y_train, y_test, deep):\n",
     "    global counter\n",
-    "    mse_lm, _ = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='ohe', deep=deep)\n",
-    "    print(' finished lm deep=%s, mse: %.2f' % (deep, mse_lm))\n",
-    "    mse_lmm, sigmas = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='lmm', deep=deep)\n",
+    "    mse_ohe, _, n_epochs_ohe, time_ohe = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='ohe', deep=deep)\n",
+    "    print(' finished ohe deep=%s, mse: %.2f' % (deep, mse_ohe))\n",
+    "    mse_lmm, sigmas, n_epochs_lmm, time_lmm = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='lmm', deep=deep)\n",
     "    print(' finished lmm deep=%s, mse: %.2f' % (deep, mse_lmm))\n",
-    "    mse_ig, _ = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='ignore', deep=deep)\n",
+    "    mse_ig, _, n_epochs_ig, time_ig = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='ignore', deep=deep)\n",
     "    print(' finished ignore deep=%s, mse: %.2f' % (deep, mse_ig))\n",
-    "    mse_em, _ = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='embed', deep=deep)\n",
+    "    mse_em, _, n_epochs_em, time_em = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='embed', deep=deep)\n",
     "    print(' finished embed deep=%s, mse: %.2f' % (deep, mse_em))\n",
-    "    mse_me, sigmas_me = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='menet', deep=deep)\n",
+    "    mse_me, sigmas_me, n_epochs_me, time_me = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='menet', deep=deep)\n",
     "    print(' finished menet deep=%s, mse: %.2f' % (deep, mse_me))\n",
-    "    mse_dec = 100 * (mse_lmm - mse_lm) / mse_lm\n",
-    "    res.loc[counter + 0] = [i, 'lm', deep, mse_lm, np.nan, np.nan]\n",
-    "    res.loc[counter + 1] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1]]\n",
-    "    res.loc[counter + 2] = [i, 'ignore', deep, mse_ig, np.nan, np.nan]\n",
-    "    res.loc[counter + 3] = [i, 'embed', deep, mse_em, np.nan, np.nan]\n",
-    "    res.loc[counter + 4] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan]\n",
+    "    res.loc[counter + 0] = [i, 'ohe', deep, mse_ohe, np.nan, np.nan, n_epochs_ohe, time_ohe]\n",
+    "    res.loc[counter + 1] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1], n_epochs_lmm, time_lmm]\n",
+    "    res.loc[counter + 2] = [i, 'ignore', deep, mse_ig, np.nan, np.nan, n_epochs_ig, time_ig]\n",
+    "    res.loc[counter + 3] = [i, 'embed', deep, mse_em, np.nan, np.nan, n_epochs_em, time_em]\n",
+    "    res.loc[counter + 4] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan, , n_epochs_me, time_me]\n",
     "    counter += 5\n",
-    "    print('iteration %d, deep=%s, mse change from mse_lm: %.2f%%' % (i, deep, mse_dec))   \n",
     "\n",
     "kf = KFold(n_splits=5)\n",
     "X, y = ukb.drop('enmo', axis=1), ukb['enmo']\n",
@@ -419,41 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   experiment exp_type  deep       mse  sigma_e_est  sigma_b_est\n",
-       "0           0       lm  True  0.796427          NaN          NaN\n",
-       "1           0      lmm  True  0.792857     0.802984     0.026488\n",
-       "2           0   ignore  True  0.796482          NaN          NaN\n",
-       "3           0    embed  True  0.799779          NaN          NaN\n",
-       "4           1       lm  True  0.850871          NaN          NaN\n",
-       "5           1      lmm  True  0.839481     0.958734     0.053938\n",
-       "6           1   ignore  True  0.843228          NaN          NaN\n",
-       "7           1    embed  True  0.855721          NaN          NaN\n",
-       "8           2       lm  True  0.804002          NaN          NaN\n",
-       "9           2      lmm  True  0.796409     0.814193     0.016641\n",
-       "10          2   ignore  True  0.798040          NaN          NaN\n",
-       "11          2    embed  True  0.803481          NaN          NaN\n",
-       "12          3       lm  True  0.812773          NaN          NaN\n",
-       "13          3      lmm  True  0.809889     0.823830     0.008857\n",
-       "14          3   ignore  True  0.812973          NaN          NaN\n",
-       "15          3    embed  True  0.811329          NaN          NaN\n",
-       "16          4       lm  True  0.815863          NaN          NaN\n",
-       "17          4      lmm  True  0.804275     0.802134     0.006731\n",
-       "18          4   ignore  True  0.808503          NaN          NaN\n",
-       "19          4    embed  True  0.815544          NaN          NaN"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>experiment</th>\n      <th>exp_type</th>\n      <th>deep</th>\n      <th>mse</th>\n      <th>sigma_e_est</th>\n      <th>sigma_b_est</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>lm</td>\n      <td>True</td>\n      <td>0.796427</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.792857</td>\n      <td>0.802984</td>\n      <td>0.026488</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.796482</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.799779</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>lm</td>\n      <td>True</td>\n      <td>0.850871</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.839481</td>\n      <td>0.958734</td>\n      <td>0.053938</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.843228</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.855721</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2</td>\n      <td>lm</td>\n      <td>True</td>\n      <td>0.804002</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.796409</td>\n      <td>0.814193</td>\n      <td>0.016641</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.798040</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.803481</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>3</td>\n      <td>lm</td>\n      <td>True</td>\n      <td>0.812773</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>3</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.809889</td>\n      <td>0.823830</td>\n      <td>0.008857</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>3</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.812973</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>3</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.811329</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>4</td>\n      <td>lm</td>\n      <td>True</td>\n      <td>0.815863</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>4</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.804275</td>\n      <td>0.802134</td>\n      <td>0.006731</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>4</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.808503</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>4</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.815544</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 36
-    }
-   ],
+   "outputs": [],
    "source": [
     "res"
    ]
@@ -464,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/ukb_pa.csv')"
+    "res.to_csv('../results/res_ukb_pa.csv')"
    ]
   }
  ]
