Updates airbnb notebook to include runtime

--- a/notebooks/airbnb.ipynb
+++ b/notebooks/airbnb.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -410,21 +411,23 @@
     "    X_test_ohe_comp = X_test_ohe_comp[X_train_ohe.columns]\n",
     "    return X_train_ohe, X_test_ohe_comp\n",
     "\n",
-    "def reg_nn(X_train, X_test, y_train, y_test, batch=30, epochs=500, patience=10, reg_type='lm'):    \n",
+    "def reg_nn(X_train, X_test, y_train, y_test, batch=30, epochs=500, patience=10, reg_type='lm'):\n",
+    "    start = time.time()\n",
     "#     if reg_type == 'lm':\n",
     "#         pass#y_pred, sigmas = reg_nn_lm(X_train, X_test, y_train, y_test, batch, epochs, patience, deep)\n",
     "    if reg_type == 'lmm':\n",
-    "        y_pred, sigmas = reg_nn_lmm(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_lmm(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
     "    elif reg_type == 'ignore':\n",
-    "        y_pred, sigmas = reg_nn_ignore(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_ignore(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
     "    elif reg_type == 'embed':\n",
-    "        y_pred, sigmas = reg_nn_embed(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_embed(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
     "    elif reg_type == 'menet':\n",
-    "        y_pred, sigmas, _ = reg_nn_menet(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_menet(X_train, X_test, y_train, y_test, batch, epochs, patience)\n",
     "    else:\n",
     "      raise ValueError(reg_type + 'is an unknown reg_type')\n",
+    "    end = time.time()\n",
     "    mse = np.mean((y_pred - y_test)**2)\n",
-    "    return mse, sigmas\n",
+    "    return mse, sigmas, n_epochs, end - start\n",
     "\n",
     "def reg_nn_ignore(X_train, X_test, y_train, y_test, batch_size, epochs, patience):\n",
     "    model = Sequential()\n",
@@ -438,7 +441,7 @@
     "    history = model.fit(X_train[col_set], y_train, epochs=NUM_ITERATIONS, verbose=0,\n",
     "                        batch_size=BATCH_SIZE, validation_split = 0.1, callbacks=callbacks)\n",
     "    y_pred = model.predict(X_test[col_set]).reshape(X_test.shape[0])\n",
-    "    return y_pred, (None, None)\n",
+    "    return y_pred, (None, None), len(history.history['loss'])\n",
     "\n",
     "def reg_nn_embed(X_train, X_test, y_train, y_test, batch_size, epochs, patience):\n",
     "    embed_dim = 100\n",
@@ -461,7 +464,7 @@
     "    history = model.fit([X_train[col_set], X_train['host_id']], y_train, batch_size=batch_size, epochs=epochs,\n",
     "                        validation_split=0.1, callbacks=callbacks, verbose=0)\n",
     "    y_pred = model.predict([X_test[col_set], X_test['host_id']]).reshape(X_test.shape[0])\n",
-    "    return y_pred, (None, None)\n",
+    "    return y_pred, (None, None), len(history.history['loss'])\n",
     "\n",
     "def reg_nn_lmm(X_train, X_test, y_train, y_test, batch_size, epochs, patience):\n",
     "    X_input = Input(shape=(X_train[col_set].shape[1],))\n",
@@ -476,7 +479,13 @@
     "    adam = Adam(lr=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\n",
     "    model.compile(optimizer= adam)\n",
     "\n",
-    "    callbacks = [EarlyStoppingWithSigmasConvergence(patience = 10)]\n",
+    "    # callbacks = [EarlyStoppingWithSigmasConvergence(patience = 10)]\n",
+    "    callbacks = [EarlyStopping(monitor='val_loss', patience=epochs if patience is None else patience)]\n",
+    "    \n",
+    "    X_train.reset_index(inplace=True)\n",
+    "    X_train.sort_values(by=['host_id'], inplace=True)\n",
+    "    y_train = y_train[X_train.index]\n",
+    "    \n",
     "    history = model.fit([X_train[col_set], y_train, X_train['host_id']], None, batch_size=batch_size, epochs=epochs,\n",
     "                        validation_split=0.1, callbacks=callbacks, verbose=0)\n",
     "\n",
@@ -484,7 +493,7 @@
     "    y_pred_tr = model.predict([X_train[col_set], y_train, X_train['host_id']]).reshape(X_train.shape[0])\n",
     "    b_hat = calc_b_hat(X_train, y_train, y_pred_tr, n_cats, sig2e_est, sig2b_est, 'host_id')\n",
     "    y_pred = model.predict([X_test[col_set], np.random.normal(size=y_test.shape), X_test['host_id']]).reshape(X_test.shape[0]) + b_hat[X_test['host_id']]\n",
-    "    return y_pred, (sig2e_est, sig2b_est)\n",
+    "    return y_pred, (sig2e_est, sig2b_est), len(history.history['loss'])\n",
     "\n",
     "def reg_nn_menet(X_train, X_test, y_train, y_test, batch_size, epochs, patience):\n",
     "    q = n_cats\n",
@@ -499,63 +508,35 @@
     "    adam = Adam(lr=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\n",
     "    model.compile(loss='mse', optimizer=adam)\n",
     "\n",
-    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q,\n",
-    "        batch_size, epochs, patience, verbose=True)\n",
+    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q, batch_size, epochs, patience, verbose=True)\n",
     "    y_pred = menet_predict(model, X_test, clusters_test, q, b_hat)\n",
     "    return y_pred, (sig2e_est, None), n_epochs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "iteration 0\n",
-      " finished lmm deep=True, mse: 0.14\n",
-      " finished ignore deep=True, mse: 0.15\n",
-      " finished embed deep=True, mse: 0.15\n",
-      "iteration 1\n",
-      " finished lmm deep=True, mse: 0.14\n",
-      " finished ignore deep=True, mse: 0.16\n",
-      " finished embed deep=True, mse: 0.16\n",
-      "iteration 2\n",
-      " finished lmm deep=True, mse: 0.14\n",
-      " finished ignore deep=True, mse: 0.15\n",
-      " finished embed deep=True, mse: 0.16\n",
-      "iteration 3\n",
-      " finished lmm deep=True, mse: 0.14\n",
-      " finished ignore deep=True, mse: 0.15\n",
-      " finished embed deep=True, mse: 0.15\n",
-      "iteration 4\n",
-      " finished lmm deep=True, mse: 0.15\n",
-      " finished ignore deep=True, mse: 0.16\n",
-      " finished embed deep=True, mse: 0.16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res = pd.DataFrame(columns=['experiment', 'exp_type', 'deep', 'mse', 'sigma_e_est', 'sigma_b_est'])\n",
+    "res = pd.DataFrame(columns=['experiment', 'exp_type', 'deep', 'mse', 'sigma_e_est', 'sigma_b_est', 'n_epoch', 'time'])\n",
     "counter = 0\n",
     "\n",
     "def iterate_reg_types(X_train, X_test, y_train, y_test, deep):\n",
     "    global counter\n",
-    "    mse_lmm, sigmas = reg_nn(X_train, X_test, y_train, y_test, reg_type='lmm')\n",
+    "    mse_lmm, sigmas, n_epochs_lmm, time_lmm = reg_nn(X_train, X_test, y_train, y_test, reg_type='lmm')\n",
     "    print(' finished lmm deep=%s, mse: %.2f' % (deep, mse_lmm))\n",
-    "    mse_ig, _ = reg_nn(X_train, X_test, y_train, y_test, reg_type='ignore')\n",
+    "    mse_ig, _, n_epochs_ig, time_ig = reg_nn(X_train, X_test, y_train, y_test, reg_type='ignore')\n",
     "    print(' finished ignore deep=%s, mse: %.2f' % (deep, mse_ig))\n",
-    "    mse_em, _ = reg_nn(X_train, X_test, y_train, y_test, reg_type='embed')\n",
+    "    mse_em, _, n_epochs_em, time_em = reg_nn(X_train, X_test, y_train, y_test, reg_type='embed')\n",
     "    print(' finished embed deep=%s, mse: %.2f' % (deep, mse_em))\n",
-    "    mse_me, sigmas_me = reg_nn(X_train, X_test, y_train, y_test, reg_type='menet')\n",
+    "    mse_me, sigmas_me, n_epochs_me, time_me = reg_nn(X_train, X_test, y_train, y_test, reg_type='menet')\n",
     "    print(' finished menet deep=%s, mse: %.2f' % (deep, mse_me))\n",
-    "    res.loc[counter + 0] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1]]\n",
-    "    res.loc[counter + 1] = [i, 'ignore', deep, mse_ig, np.nan, np.nan]\n",
-    "    res.loc[counter + 2] = [i, 'embed', deep, mse_em, np.nan, np.nan]\n",
-    "    res.loc[counter + 3] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan]\n",
-    "    counter += 4 \n",
+    "    res.loc[counter + 0] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1], n_epochs_lmm, time_lmm]\n",
+    "    res.loc[counter + 1] = [i, 'ignore', deep, mse_ig, np.nan, np.nan, n_epochs_ig, time_ig]\n",
+    "    res.loc[counter + 2] = [i, 'embed', deep, mse_em, np.nan, np.nan, n_epochs_em, time_em]\n",
+    "    res.loc[counter + 3] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan, n_epochs_me, time_me]\n",
+    "    counter += 4\n",
     "\n",
     "kf = KFold(n_splits=5)\n",
     "\n",
@@ -567,36 +548,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   experiment exp_type  deep       mse  sigma_e_est  sigma_b_est\n",
-       "0           0      lmm  True  0.139199     0.066692     0.077929\n",
-       "1           0   ignore  True  0.150673          NaN          NaN\n",
-       "2           0    embed  True  0.150674          NaN          NaN\n",
-       "3           1      lmm  True  0.144429     0.061695     0.072743\n",
-       "4           1   ignore  True  0.161680          NaN          NaN\n",
-       "5           1    embed  True  0.163593          NaN          NaN\n",
-       "6           2      lmm  True  0.140581     0.062678     0.070015\n",
-       "7           2   ignore  True  0.152785          NaN          NaN\n",
-       "8           2    embed  True  0.158924          NaN          NaN\n",
-       "9           3      lmm  True  0.140788     0.062919     0.070368\n",
-       "10          3   ignore  True  0.152616          NaN          NaN\n",
-       "11          3    embed  True  0.154781          NaN          NaN\n",
-       "12          4      lmm  True  0.149100     0.065086     0.073124\n",
-       "13          4   ignore  True  0.160530          NaN          NaN\n",
-       "14          4    embed  True  0.164070          NaN          NaN"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>experiment</th>\n      <th>exp_type</th>\n      <th>deep</th>\n      <th>mse</th>\n      <th>sigma_e_est</th>\n      <th>sigma_b_est</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.139199</td>\n      <td>0.066692</td>\n      <td>0.077929</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.150673</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.150674</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.144429</td>\n      <td>0.061695</td>\n      <td>0.072743</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.161680</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.163593</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.140581</td>\n      <td>0.062678</td>\n      <td>0.070015</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.152785</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.158924</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>3</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.140788</td>\n      <td>0.062919</td>\n      <td>0.070368</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>3</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.152616</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>3</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.154781</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>4</td>\n      <td>lmm</td>\n      <td>True</td>\n      <td>0.149100</td>\n      <td>0.065086</td>\n      <td>0.073124</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>4</td>\n      <td>ignore</td>\n      <td>True</td>\n      <td>0.160530</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>4</td>\n      <td>embed</td>\n      <td>True</td>\n      <td>0.164070</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 33
-    }
-   ],
+   "outputs": [],
    "source": [
     "res"
    ]
@@ -607,7 +561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/airbnb.csv')"
+    "res.to_csv('../results/res_airbnb.csv')"
    ]
   }
  ]
