Fixes typo in ukb_pa notebook

--- a/notebooks/ukb_pa.ipynb
+++ b/notebooks/ukb_pa.ipynb
@@ -370,7 +370,7 @@
     "    res.loc[counter + 1] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1], n_epochs_lmm, time_lmm]\n",
     "    res.loc[counter + 2] = [i, 'ignore', deep, mse_ig, np.nan, np.nan, n_epochs_ig, time_ig]\n",
     "    res.loc[counter + 3] = [i, 'embed', deep, mse_em, np.nan, np.nan, n_epochs_em, time_em]\n",
-    "    res.loc[counter + 4] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan, , n_epochs_me, time_me]\n",
+    "    res.loc[counter + 4] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan, n_epochs_me, time_me]\n",
     "    counter += 5\n",
     "\n",
     "kf = KFold(n_splits=5)\n",
