--- a/notebooks/ukb_pa_spatial.ipynb
+++ b/notebooks/ukb_pa_spatial.ipynb
@@ -39,7 +39,8 @@
     "from sklearn.model_selection import KFold\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
     "\r\n",
-    "from lmmnn.nn import reg_nn_ohe_or_ignore, reg_nn_lmm, reg_nn_embed"
+    "from lmmnn.nn import reg_nn_ohe_or_ignore, reg_nn_lmm, reg_nn_embed\r\n",
+    "from lmmnn.simulation import Count"
    ],
    "outputs": [],
    "metadata": {}
@@ -525,7 +526,7 @@
     "        y_pred, sigmas, _, n_epochs = reg_nn_embed(X_train, X_test, y_train, y_test, [n_cats], x_cols,\r\n",
     "        batch, epochs, patience, n_neurons, dropout, activation, mode, n_sig2bs, est_cors, verbose)\r\n",
     "    # elif reg_type == 'menet':\r\n",
-    "    #     y_pred, sigmas, n_epochs = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, batch,\r\n",
+    "    #     y_pred, sigmas, _, n_epochs = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, x_cols, batch,\r\n",
     "    #     epochs, patience, n_neurons, dropout, activation)\r\n",
     "    else:\r\n",
     "      raise ValueError(reg_type + 'is an unknown reg_type')\r\n",
@@ -541,18 +542,6 @@
    "execution_count": 21,
    "source": [
     "res = pd.DataFrame(columns=['experiment', 'exp_type', 'mse', 'sigma_e_est', 'sigma_b0_est', 'sigma_b1_est', 'n_epoch', 'time'])\r\n",
-    "\r\n",
-    "class Count:\r\n",
-    "    curr = 0\r\n",
-    "\r\n",
-    "    def __init__(self, startWith=None):\r\n",
-    "        if startWith is not None:\r\n",
-    "            Count.curr = startWith - 1\r\n",
-    "\r\n",
-    "    def gen(self):\r\n",
-    "        while True:\r\n",
-    "            Count.curr += 1\r\n",
-    "            yield Count.curr\r\n",
     "\r\n",
     "def iterate_reg_types(X_train, X_test, y_train, y_test, counter, verbose):\r\n",
     "    mse_lmm, sigmas, n_epochs_lmm, time_lmm = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='lmm', verbose=verbose)\r\n",
@@ -573,7 +562,7 @@
     "    res.loc[next(counter)] = [i, 'ohe', mse_ohe, np.nan, np.nan, np.nan, n_epochs_ohe, time_ohe]\r\n",
     "    res.loc[next(counter)] = [i, 'ignore', mse_ig, np.nan, np.nan, np.nan, n_epochs_ig, time_ig]\r\n",
     "    res.loc[next(counter)] = [i, 'embed', mse_em, np.nan, np.nan, np.nan, n_epochs_em, time_em]\r\n",
-    "    # res.loc[next(counter)] = [i, 'menet', mse_me, sigmas_me[0], np.nan, n_epochs_me, time_me]\r\n",
+    "    # res.loc[next(counter)] = [i, 'menet', mse_me, sigmas_me[0], np.nan, np.nan, n_epochs_me, time_me]\r\n",
     "\r\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\r\n",
     "counter = Count().gen()\r\n",
